--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.7.5",
     "@storybook/html": "^5.2.8",
     "babel-loader": "^8.0.6",
-    "handlebars": "^4.5.3"
+    "handlebars": "^4.5.3",
+    "postcss-functions": "^3.0.0"
   }
 }
