--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/html": "^5.2.8",
     "babel-loader": "^8.0.6",
     "handlebars": "^4.5.3",
+    "postcss-each": "^0.10.0",
     "postcss-functions": "^3.0.0"
   }
 }
